fix overflow-x body

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
 body {
   color: var(--color-1);
   font-size: 1.5rem;
+  overflow-x: hidden;
 }
 .header {
   padding: 14px 26px 0 60px;
